# augselfies

./: .gitignore  LICENSE.txt  README.md  pixi.toml  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
docs/api/: augselfies.rst  modules.rst
src/augselfies/: __init__.py  augmentation.py  constants.py  numeralization.py  smiles.py
src/augselfies.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: .coverage  conftest.py
tests/augselfies/: augmentation_test.py  numeralization_test.py  roundrip_test.py  smiles_test.py  test_constants.py
tests/test_grammars/: chiral_grammar  grammar_a  group_grammar_a
tests/test_sets/: readme.txt  smiles.csv
