
[project]
name = "augselfies"
version = "0.1.0"
description = "Augmentation of SELFIES encoding"
readme = "README.md"

license = "MIT":
license-files = ["LICENSE*]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64","linux-aarch64","osx-arm64"]

[tool.pixi.pypi-dependencies]
augselfies = { path = ".", editable = true }
group-selfies = {path = "../group-selfies", editable = true}

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyscaffold = ">=4.6,<5"
selfies = ">=2.1.2,<3"
rdkit = ">=2025.3.1"
ipykernel = ">=6.29.5,<7"
pip = ">=24.3.1,<25"
networkx = "*"
tqdm = "*"
sigtools = "*"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.4,<9"
pytest-cov = ">=6.0.0,<7"

[tool.pixi.feature.docs.dependencies]
sphinx="*"

[tool.pixi.environments]
test = ["test"]
docs = ["docs"]