
[project]
name = "augselfies"
version = "0.1.1"
description = "Augmentation of SELFIES encoding"
readme = "README.md"


license = "MIT"
license-files = ["LICENSE*"]

[project.optional-dependencies] #for direct installation via pip
pip = ["pandas",
"selfies>=2.2.0,<3",
"rdkit>=2025.3.1",
"networkx",
"tqdm",
"sigtools"] #NOTE: A lack of a group-selfies dependency causes certain failed behaviors for GroupSELFIES/NumGroupSELFIES. This will be replaced with a tested mirror in future releases.

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]



[tool.hatch.metadata]
allow-direct-references = true 
