
[project]
name = "augselfies"
version = "0.1.1"
description = "Augmentation of SELFIES encoding"
readme = "README.md"


license = "MIT"
license-files = ["LICENSE*"]

dependencies =  ["pandas",
"selfies>=2.2.0,<3",
"rdkit>=2024.9.2",
"networkx",
"tqdm",
"sigtools",
"group-selfies @ git+https://github.com/lanl/group-selfies@dev"
] 

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true 
